--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -10,7 +10,8 @@
 	align-items: center;
 	font-size: larger;
 
-	/* border: 1px black solid; */
+	box-shadow: var(--shadow);
+
 	border-radius: 10px;
 	background-color: rgb(238, 236, 236);
 	width: 450px;
@@ -20,8 +21,12 @@ form input {
 	font-size: large;
 	width: 400px;
 	border-radius: 10px;
-	padding: 0.2rem 0.5rem;
+	padding: 0.35rem 0.5rem;
 	margin: 0.5rem 0;
+}
+
+form input:focus {
+	box-shadow: var(--shadow-button);
 }
 
 .field {
