--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+:root {
+	--bgcolor: rgb(238, 236, 236);
+	--shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.5);
+	--shadow-button: 0px 5px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -15,4 +21,16 @@ button {
 	border-radius: 10px;
 	padding: 0.5rem 1rem;
 	cursor: pointer;
+
+	box-shadow: var(--shadow-button);
+	transition: 1s;
+}
+
+button:hover {
+	color: darkcyan;
+	box-shadow: var(--shadow);
+}
+
+button::after {
+	transform: scale(98);
 }
