--- a/src/shared/Navbar/Navbar.css
+++ b/src/shared/Navbar/Navbar.css
@@ -4,8 +4,7 @@
 	align-items: center;
 
 	background-color: chartreuse;
-	-webkit-box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.8);
-	box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.8);
+	box-shadow: var(--shadow);
 }
 .navbar-links a {
 	text-decoration: none;
