--- a/src/components/products/Product.css
+++ b/src/components/products/Product.css
@@ -41,3 +41,14 @@
 	display: flex;
 	justify-content: center;
 }
+
+.order-container form {
+	display: grid;
+	grid-template-columns: 1fr;
+	place-items: center;
+}
+
+.order-container input {
+	width: fit-content;
+	cursor: pointer;
+}
